# src/apps/apis/nodes-api/resources/NodeNetworkSummaryResource.ts
@@ -1,0 +1,5 @@
+export type NodeNetworkSummaryResource = {
+  privateCount: number;
+  publicCount: number;
+  total: number;
+};
