# src/apps/apis/nodes-api/resources/NodeRelayResource.ts
@@ -1,0 +1,7 @@
+export type NodeRelayResource = {
+  advertised: boolean;
+  autoEnabled: boolean;
+  enabled: boolean;
+  peerId?: string;
+  running: boolean;
+};
