# src/apps/apis/nodes-api/resources/NodeRuntimeResource.ts
@@ -1,0 +1,4 @@
+export type NodeRuntimeResource = {
+  logLevel?: string;
+  transport: 'in-memory' | 'libp2p-gossipsub' | 'unknown';
+};
