# src/apps/apis/nodes-api/resources/NodeTypeResource.ts
@@ -1,0 +1,1 @@
+export type NodeTypeResource = 'leaf' | 'reachable' | 'relay' | 'unknown';
