# src/apps/apis/nodes-api/resources/PeerCapabilitiesResource.ts
@@ -1,0 +1,6 @@
+export type PeerCapabilitiesResource = {
+  gossipsub: boolean;
+  privateIpfs: boolean;
+  publicIpfs: boolean;
+  relay: boolean;
+};
