# src/apps/apis/nodes-api/resources/PeerResource.ts
@@ -1,9 +1,16 @@
+import { NodeTypeResource } from './NodeTypeResource';
+import { PeerCapabilitiesResource } from './PeerCapabilitiesResource';
+import { PeerConnectionSummaryResource } from './PeerConnectionSummaryResource';
+
 export type PeerResource = {
+  capabilities: PeerCapabilitiesResource;
+  connectionSummary: PeerConnectionSummaryResource;
   id: string;
   lastSeenAt: number;
   networks: Array<{
     id: string;
     name: string;
   }>;
+  nodeType: NodeTypeResource;
   owner?: string;
 };
